# bashkir

./: .gitignore  .gitmodules  CMakeLists.txt  debug.sh  pch.cmake  rebuild.sh  run
includes/: BuiltinRegistry.h  Shell.h  global.h
includes/builtins/: Builtin.h
includes/builtins/cd/: cd.h
includes/builtins/echo/: echo.h
includes/builtins/exit/: exit.h
includes/builtins/export/: export.h
includes/builtins/history/: history.h
includes/builtins/pwd/: pwd.h
includes/builtins/type/: type.h
includes/exceptions/: ExitException.h
includes/exec/: ExecManager.h  Executor.h
includes/input/: Autocompletion.h  BlockConstructions.h  CsiSequences.h  InputActions.h  InputHandler.h  InputSpecialKey.h  KeyBinding.h  KeyBindingsMap.h  Position.h  PreParsedInput.h  TermController.h
includes/input/interface/: CsiSequences.h  IAutocomplete.h  InputOption.h
includes/io/: NcursesIO.h  ScopedOutputRedirect.h  StdCapture.h  StreamIO.h
includes/io/interface/: BaseIO.h
includes/logger/: SpdFileLogger.h  StdioLogger.h
includes/logger/interface/: BaseLogger.h
includes/parser/: BashkirCmdParser.h  ExecutionTree.h  ItemsRange.h  TokenParser.h
includes/parser/interface/: Command.h  ExecutionUnits.h  ICmdParser.h  Tokens.h
includes/util/: convutil.h  maputil.h  pathutil.h  stlutil.h  strutil.h  timeutil.h
includes/wrappers/: NCurses.h
pch/: deps.h
src/: BuiltinRegistry.cpp  Shell.cpp  main.cpp  shell.c  utils.c
src/builtins/cd/: cd.cpp
src/builtins/echo/: echo.cpp
src/builtins/exit/: exit.cpp
src/builtins/export/: export.cpp
src/builtins/history/: history.cpp
src/builtins/pwd/: pwd.cpp
src/builtins/type/: type.cpp
src/exceptions/: ExitException.cpp
src/exec/: ExecManager.cpp  Executor.cpp
src/input/: Autocompletion.cpp  BlockConstructions.cpp  CsiSequences.cpp  InputActions.cpp  InputHandler.cpp  InputSpecialKey.cpp  KeyBinding.cpp  KeyBindingsMap.cpp  Position.cpp  PreParsedInput.cpp  TermController.cpp
src/io/: NcursesIO.cpp  ScopedOutputRedirect.cpp  StdCapture.cpp  StreamIO.cpp
src/logger/: SpdFileLogger.cpp  StdioLogger.cpp
src/parser/: BashkirCmdParser.cpp  ExecutionTree.cpp  ItemsRange.cpp
src/util/: strutil.cpp
src/wrappers/: NCurses.cpp
